kube/components/trino-gateway/trino-ingress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-traffic-to-trino-gateway
spec:
  podSelector:
    matchExpressions:
      - { key: app, operator: In, values: [ hive-metastore, minio, mysql, trino, steampipe, superset, openmetadata-server, openmetadata-ingestion, metabase, opa, nessie, trino-gateway] }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 9083
        - protocol: TCP
          port: 9000
        - protocol: TCP
          port: 9001
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 19120
        - protocol: TCP
          port: 30120
